# synapse

./: .gitignore  LICENSE  README.md  SYNAPSE_PRO_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: genesis_bridge_daemon.py  tess_monitor_daemon.py
synapse/: __init__.py  bus.py  client.py  genesis_bridge.py  mcp_server.py  models.py  registry.py  server.py  storage.py  tess_monitor.py
synapse/static/: dashboard.html
tests/: test_bus.py  test_client.py  test_models.py  test_registry.py
